--- a/cache_edu.routing.yml
+++ b/cache_edu.routing.yml
@@ -19,3 +19,33 @@ cache_edu.simple_best_before_3:
     _title: 'Simple pizza cache (best before 09/2022)'
   requirements:
     _permission: 'access content'
+cache_edu.simple_cleanup_one_pizza_4:
+  path: '/cache-edu/simple-cleanup-one-pizza-4'
+  defaults:
+    _controller: '\Drupal\cache_edu\Controller\PizzaShop::simpleCleanupOnePizza__4'
+    _title: 'Cleanup one Pizza'
+  requirements:
+    _permission: 'access content'
+cache_edu.simple_cleanup_all_pizzas_5:
+  path: '/cache-edu/simple-cleanup-all-pizzas-5'
+  defaults:
+    _controller: '\Drupal\cache_edu\Controller\PizzaShop::simpleCleanupAllPizzas__5'
+    _title: 'Cleanup all Pizzas'
+  requirements:
+    _permission: 'access content'
+
+cache_edu.frozen_pizzas_6:
+  path: '/cache-edu/frozen-pizzas-6'
+  defaults:
+    _controller: '\Drupal\cache_edu\Controller\PizzaShop::frozenPizzas__6'
+    _title: 'Margherita'
+  requirements:
+    _permission: 'access content'
+
+cache_edu.frozen_pizzas_tags_7:
+  path: '/cache-edu/frozen-pizzas-with-tags-7'
+  defaults:
+    _controller: '\Drupal\cache_edu\Controller\PizzaShop::frozenPizzasTags__7'
+    _title: 'Marinara (with Tags)'
+  requirements:
+    _permission: 'access content'
